start work on sideBar componnent

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat&family=Nunito:wght@200&family=Poiret+One&family=Quicksand:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
+      rel="stylesheet"
+    />
     <title>Admin Dashboard</title>
   </head>
   <body>
